plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.5'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.interview'
version = '0.0.1-SNAPSHOT'

repositories {
	mavenCentral()
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

//tasks.withType(JavaCompile) {
//	options.compilerArgs += ['--release', '21']
//}

dependencies {
	implementation 'org.apache.commons:commons-lang3:3.12.0'
	implementation 'org.springframework.boot:spring-boot-starter'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.projectlombok:lombok:latest.release'
	annotationProcessor 'org.projectlombok:lombok:latest.release'
	implementation 'org.postgresql:postgresql:42.2.24'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
}

tasks.named('test') {
	useJUnitPlatform()
}

// Remove `--release` from `compilerArgs` here
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}
